overlay/production/ecommerce_user/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ecommerce_user
spec:
  hosts:
    - ecommerce_user-production.apps.kowlon.my.id
    - ecommerce_user
  gateways:
    - apps
  http:
    - match: 
        - uri:
            prefix: /  
      route:
        - destination:
            port:
              number: 80
            host: ecommerce_user
